# TTP

./: .gitignore  README.md  dev.sh  package-lock.json  package.json
.github/workflows/: build.yml  deploy-landing.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/phases/01-foundation-recording/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-transcription-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-learning-settings/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-platform-parity/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-ensemble-transcription/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/25-shortcuts-modes-pill-visibility/: 25-04-SUMMARY.md
.planning/phases/26-onboarding-settings-ux/: 26-01-PLAN.md  26-02-PLAN.md  26-02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
landing/: astro.config.mjs  package-lock.json  package.json
landing/public/: install.sh
landing/src/components/: Changelog.tsx  DownloadButtons.tsx  DownloadSection.tsx  FeaturesGrid.astro  Footer.astro  HeroSection.astro  HowItWorks.astro  InstallGuide.tsx  LanguagePicker.astro  Navbar.astro  NumberTicker.tsx  PortfolioSection.astro  ScreenshotMockup.astro
landing/src/components/aceternity/: meteors.tsx
landing/src/components/magicui/: shimmer-button.tsx
landing/src/data/: portfolio.ts
landing/src/i18n/: ui.ts  utils.ts
landing/src/layouts/: Layout.astro
landing/src/lib/: github.ts
landing/src/pages/: index.astro
landing/src/pages/fr/: index.astro
landing/src/styles/: globals.css
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_monitor.rs  credentials.rs  fnkey.rs  lib.rs  logging.rs  main.rs  onboarding.rs  permissions.rs  recording.rs  shortcuts.rs  sounds.rs  state.rs  tray.rs  whatsnew.rs
src-tauri/src/dictionary/: classify.rs  detection.rs  mod.rs  store.rs
src-tauri/src/history/: mod.rs  store.rs
src-tauri/src/paste/: accessibility.rs  clipboard.rs  mod.rs  permissions.rs  simulate.rs
src-tauri/src/settings/: mod.rs  store.rs
src-tauri/src/telemetry/: analytics.rs  consent.rs  mod.rs  sentry.rs
src-tauri/src/transcription/: backup.rs  convert.rs  ensemble.rs  fusion.rs  gladia.rs  mod.rs  pipeline.rs  polish.rs  whisper.rs
src/components/: ApiKeyForm.tsx  TutorialPill.tsx  WhatsNew.tsx
src/hooks/: useRecordingControl.ts  useRecordingState.ts  useTranscription.ts  useUpdater.ts
src/lib/: analytics.ts
src/stores/: app-store.ts  settings-store.ts
src/windows/: ApiKeySetup.tsx  FloatingBar.tsx  Onboarding.tsx  Settings.tsx
~/.tauri/: ttp.key  ttp.key.pub
