[package]
name = "ttp"
version = "0.1.0"
description = "Talk To Paste - Voice to text transcription"
authors = ["TTP Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ttp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
tauri-plugin-keyring = "0.1"
tauri-plugin-mic-recorder = "2"
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
