[package]
name = "ttp"
version = "0.1.0"
description = "Talk To Paste - Voice to text transcription"
authors = ["TTP Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ttp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
tauri-plugin-mic-recorder = "2"
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["multipart", "json"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
enigo = "0.2"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
