[package]
name = "ttp"
version = "1.3.3"
description = "Talk To Paste - Voice to text transcription"
authors = ["TTP Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ttp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
hound = "3.5"
tauri-plugin-mic-recorder = "2"
cpal = "0.15"
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["multipart", "json"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
enigo = "0.2"
dirs = "5"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
sentry = "0.42"
tauri-plugin-sentry = "0.5"
tauri-plugin-aptabase = "1.0"
regex = "1"
audiopus = "0.3.0-rc.0"
ogg = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
core-foundation = "0.10"
block = "0.1"
